--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_notifications">Notifications</string>
     <string name="characters">Characters</string>
     <string name="events">Events</string>
+    <string name="comics">Comics</string>
 </resources>
